--- a/css/style.css
+++ b/css/style.css
@@ -346,6 +346,7 @@ svg.done {
   grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
   grid-gap: 40px;
   margin-top: 50px;
+  width: 70%;
   
 }
 
@@ -356,7 +357,7 @@ svg.done {
 
 .service-list div {
   background-color: #262626;
-  width: 35%;
+  max-width: none;
   border-radius: 1.5rem;
   padding: 10px;
   font-size: 13px;
@@ -376,13 +377,12 @@ svg.done {
 .service-list div h2 {
   font-size: 20px;
   font-weight: 500px;
-  margin-bottom: 15px;
+  margin-bottom: 0px;
   text-align: left;
 }
 
 .service-list div a {
   background-color: black;
-  width: 35%;
   border-radius: 1.5rem;
   padding: 10px;
   text-align: center;
@@ -393,6 +393,11 @@ svg.done {
   margin-top: 20px;
   display: inline-block;
   margin-bottom: 10px;
+}
+
+.service-list div a.jj{
+  margin: 20px 0px 10px;
+  padding: 10px;
 }
 
 .service-list div:hover {
@@ -514,6 +519,10 @@ form .btn2:hover {
 }
 
 /* Contact end */
+
+
+
+
 
 /* Media Queries */
 /* Laptop */
@@ -642,8 +651,11 @@ form .btn2:hover {
   }
 
   .service-list div {
-    width: 100%; /* Menggunakan lebar 100% pada layar lebih kecil */
+    width: 145%; /* Menggunakan lebar 100% pada layar lebih kecil */
     max-width: none; /* Menghapus pembatasan max-width */
+    
+  }
+
 
   /* Mobile */
   @media (max-width: 480px) {
@@ -658,7 +670,7 @@ form .btn2:hover {
     .about {
       height: auto; /* Mengubah ketinggian menjadi otomatis */
       flex-direction: column; /* Tata letak kolom di tampilan tablet */
-      text-align: left; /* Menyesuaikan alignment teks */
+      text-align: center; /* Menyesuaikan alignment teks */
     }
   
     .about img,
@@ -671,10 +683,8 @@ form .btn2:hover {
       margin: 0 0 20px; /* Mengatur margin bawah gambar di tablet */
     }
 
-    .service-list div {
-      width: 100%; /* Menggunakan lebar 100% pada layar lebih kecil */
-      max-width: none; /* Menghapus pembatasan max-width */
-  }
+
+  
 
   /* Gaya untuk animasi teks diketik */
   @keyframes typing {
